--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "antd": "^3.3.0",
+    "bluebird": "^3.5.1",
+    "lodash": "^4.17.5",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
