--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "webpack-dev-server"
