--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "react-hot-loader": "^4.0.0",
-    "script-loader": "^0.7.2",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
@@ -25,6 +25,7 @@
   "dependencies": {
     "antd": "^3.3.0",
     "bluebird": "^3.5.1",
+    "immutable": "^3.8.2",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
