--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "antd": "^3.3.0",
     "bluebird": "^3.5.1",
+    "echarts": "^4.0.4",
+    "echarts-for-react": "^2.0.8",
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
