update to support layout for best customers

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "echarts-for-react": "^2.0.8",
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
