--- a/worker/.eslintrc.yaml
+++ b/worker/.eslintrc.yaml
@@ -10,3 +10,4 @@
     react/jsx-filename-extension: off
     no-restricted-globals: off
     linebreak-style: off
+    import/prefer-default-export: off
