--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "bluebird": "^3.5.1",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
+    "graphql-request": "^1.5.1",
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.6",
+    "react-resizable": "^1.7.5",
     "uuid": "^3.2.1"
   },
   "scripts": {
