--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "plugins": ["react-hot-loader/babel"],
+  "plugins": ["transform-object-rest-spread", "react-hot-loader/babel"],
   "presets": [ "react", "es2015"]
 }
