--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "uuid": "^3.2.1"
   },
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "data": "cd simulator-data && node generate-data"
   }
 }
