--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-  "plugins": ["transform-object-rest-spread", "react-hot-loader/babel"],
-  "presets": [ "react", "es2015"]
+  "plugins": [
+    "react-hot-loader/babel",
+    "transform-class-properties",
+    "transform-object-rest-spread"    
+  ],
+  "presets": [
+    "react",
+    "es2015"
+  ]
 }
