--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@daojs/atlas",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index-test.js",
   "repository": "https://github.com/daojs/atlas.git",
   "author": "Wei Wei <shazhouke@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -25,6 +26,7 @@
   "dependencies": {
     "antd": "^3.3.0",
     "axios": "^0.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bluebird": "^3.5.1",
     "echarts": "^4.0.4",
@@ -39,6 +41,7 @@
     "react-grid-layout": "^0.16.6",
     "react-resizable": "^1.7.5",
     "uuid": "^3.2.1",
+    "wolfy87-eventemitter": "^5.2.4",
     "yamljs": "^0.3.0"
   },
   "scripts": {
