--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.6",
     "react-resizable": "^1.7.5",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "uuid": "^3.2.1",
@@ -51,6 +53,7 @@
     "start": "node ./server.js",
     "data": "cd simulator-data && node generate-data",
     "build": "webpack",
-    "dev": "webpack --watch | node ./server.js"
+    "dev": "webpack --watch | node ./server.js",
+    "watch": "webpack --watch"
   }
 }
