--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bluebird": "^3.5.1",
+    "calculation-network": "^0.0.2",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
     "graphql-request": "^1.5.1",
