--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "start": "node ./server.js",
     "data": "cd simulator-data && cd master-kong && node generate-forcast-data",
     "build": "webpack",
-    "dev": "webpack --watch | node ./server.js",
-    "watch": "webpack --watch"
+    "dev": "webpack-dev-server",
+    "watch": "webpack --watch",
+    "deploy": "yarn | yarn run build | forever restartall"
   }
 }
