--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "uuid": "^3.2.1",
+    "xlsx-to-json": "^0.3.0",
     "yamljs": "^0.3.0"
   },
   "scripts": {
