--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "echarts-for-react": "^2.0.8",
     "graphql-request": "^1.5.1",
     "immutable": "^3.8.2",
+    "json-loader": "^0.5.7",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
@@ -51,6 +52,7 @@
     "request-promise": "^4.2.2",
     "uuid": "^3.2.1",
     "wolfy87-eventemitter": "^5.2.4",
+    "yaml-loader": "^0.5.0",
     "yamljs": "^0.3.0"
   },
   "scripts": {
