--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.7.0",
     "react-hot-loader": "^4.0.0",
     "style-loader": "^0.20.3",
+    "text-loader": "^0.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
@@ -43,6 +44,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.6",
+    "react-markdown": "^3.3.0",
     "react-resizable": "^1.7.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
