--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
@@ -31,6 +32,8 @@
     "bluebird": "^3.5.1",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
+    "eslint-plugin-lodash": "^2.7.0",
+    "eslint-plugin-lodash-fp": "^2.1.3",
     "graphql-request": "^1.5.1",
     "immutable": "^3.8.2",
     "koa": "^2.5.0",
@@ -59,6 +62,7 @@
     "data": "cd simulator-data && cd master-kong && node generate-forecast-data",
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "lint": "eslint ./src"
   }
 }
