turn off "fp/no-nil"

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -48,7 +48,7 @@ rules:
   fp/no-mutating-assign: error
   fp/no-mutating-methods: error
   fp/no-mutation: error
-  fp/no-nil: error
+  fp/no-nil: off
   fp/no-proxy: error
   fp/no-rest-parameters: error
   fp/no-this: off
