--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -47,7 +47,9 @@ rules:
   fp/no-loops: error
   fp/no-mutating-assign: error
   fp/no-mutating-methods: error
-  fp/no-mutation: error
+  fp/no-mutation:
+  - error
+  - "allowThis": true
   fp/no-nil: off
   fp/no-proxy: error
   fp/no-rest-parameters: error
