--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
@@ -31,12 +32,14 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bluebird": "^3.5.1",
+    "calculation-network": "^0.0.2",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
     "eslint-plugin-lodash": "^2.7.0",
     "eslint-plugin-lodash-fp": "^2.1.3",
     "graphql-request": "^1.5.1",
     "immutable": "^3.8.2",
+    "json-loader": "^0.5.7",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
@@ -56,6 +59,7 @@
     "request-promise": "^4.2.2",
     "uuid": "^3.2.1",
     "xlsx-to-json": "^0.3.0",
+    "yaml-loader": "^0.5.0",
     "yamljs": "^0.3.0"
   },
   "scripts": {
