Move new story to new-src

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@daojs/atlas",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "new-src/index.js",
   "repository": "https://github.com/daojs/atlas.git",
   "author": "Wei Wei <shazhouke@gmail.com>",
   "license": "MIT",
